[package]
name = "pdf-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["multipart"]}
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread", "macros"] }
serde = {version = "1.0.215", features = ["derive"]}
tower-http = { version = "0.6.2", features = ["fs"]}
serde_json = "1.0"

reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"